--- a/index.html
+++ b/index.html
@@ -50,11 +50,16 @@
           <a href="https://drive.google.com/drive/u/0/my-drive" class="social-buttons__button social-button social-button--drive" aria-label="drive">
             <span class="social-button__inner">
               <i class="fa-brands fa-google-drive"></i>
-            </span>
+            </span>   
           </a>
           <a href="https://www.apnacollege.in/start" class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
             <span class="social-button__inner">
               <i class="fa-solid fa-a"></i>
+            </span>
+          </a>
+          <a href="https://www.apnacollege.in/start" class="social-buttons__button social-button social-button--freelancer" aria-label="freelancer">
+            <span class="social-button__inner">
+              <i class="fa-solid fa-dove"></i>
             </span>
           </a>
         </div>
