--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </a>
           <a href="https://www.apnacollege.in/start" class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
             <span class="social-button__inner">
-              <i class="fa-solid fa-a"></i>
+              <i class="fa-solid fa-book"></i>
             </span>
           </a>
           <a href="https://www.apnacollege.in/start" class="social-buttons__button social-button social-button--freelancer" aria-label="freelancer">
