--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <i class="fa-solid fa-book"></i>
             </span>
           </a>
-          <a href="https://www.apnacollege.in/start" class="social-buttons__button social-button social-button--freelancer" aria-label="freelancer">
+          <a href="https://www.freelancer.in/dashboard" class="social-buttons__button social-button social-button--freelancer" aria-label="freelancer">
             <span class="social-button__inner">
               <i class="fa-solid fa-dove"></i>
             </span>
