chrome new page commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="topBar">
-      <a href="https://dhruvcss.github.io/7/" target = "_blank">My Site</a>
+      <a href="https://dhruv1086k.github.io/dhurvportfolio/" target = "_blank">My Site</a>
     </div>
     <div class="center">
       <div class="right">
@@ -60,6 +60,21 @@
           <a href="https://www.freelancer.in/dashboard" class="social-buttons__button social-button social-button--freelancer" aria-label="freelancer">
             <span class="social-button__inner">
               <i class="fa-solid fa-dove"></i>
+            </span>
+          </a>
+          <a href="https://tailwindcss.com/docs/installation" class="social-buttons__button social-button social-button--tailwind" aria-label="tailwind">
+            <span class="social-button__inner">
+              <i class="fa-solid fa-code"></i>
+            </span>
+          </a>
+          <a href="https://fonts.google.com/" class="social-buttons__button social-button social-button--googlefonts" aria-label="googlefonts">
+            <span class="social-button__inner">
+              <i class="fa-solid fa-font"></i>
+            </span>
+          </a>
+          <a href="https://fontawesome.com/icons" class="social-buttons__button social-button social-button--fontawesome" aria-label="fontawesome">
+            <span class="social-button__inner">
+              <i class="fa-solid fa-font-awesome"></i>
             </span>
           </a>
         </div>
