chrome web custom new

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
               <i class="fab fa-instagram"></i>
             </span>
           </a>
+          <a href="https://x.com/home" target="_blank" class="social-buttons__button social-button social-button--twitter" aria-label="Twitter">
+            <span class="social-button__inner">
+              <i class="fa-brands fa-x-twitter"></i>
+            </span>
+          </a>
           <a href="https://github.com/dhruv1086k" class="social-buttons__button social-button social-button--github" aria-label="GitHub">
             <span class="social-button__inner">
               <i class="fab fa-github"></i>
-            </span>
-          </a>
-          <a href="https://codepen.io/trending" class="social-buttons__button social-button social-button--codepen" aria-label="CodePen">
-            <span class="social-button__inner">
-              <i class="fab fa-codepen"></i>
             </span>
           </a>
           <a href="https://mail.google.com/mail/u/0/#inbox" class="social-buttons__button social-button social-button--mail" aria-label="mail">
@@ -52,24 +52,24 @@
               <i class="fa-brands fa-google-drive"></i>
             </span>   
           </a>
-          <a href="https://www.apnacollege.in/start" class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
+          <a href="https://www.apnacollege.in/path-player?courseid=sigma-feb24&unit=660fa65a3a4c0bc8650f7e5aUnit" class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
             <span class="social-button__inner">
               <i class="fa-solid fa-book"></i>
             </span>
           </a>
-          <a href="https://www.freelancer.in/dashboard" class="social-buttons__button social-button social-button--freelancer" aria-label="freelancer">
+          <a href="https://www.fiverr.com/users/dhruvpal1086/seller_dashboard" class="social-buttons__button social-button social-button--fiverr" aria-label="fiverr">
             <span class="social-button__inner">
-              <i class="fa-solid fa-dove"></i>
+              <i class="fa-brands fa-fonticons-fi"></i>
             </span>
           </a>
           <a href="https://tailwindcss.com/docs/installation" class="social-buttons__button social-button social-button--tailwind" aria-label="tailwind">
             <span class="social-button__inner">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-file-code"></i>
             </span>
           </a>
           <a href="https://fonts.google.com/" class="social-buttons__button social-button social-button--googlefonts" aria-label="googlefonts">
             <span class="social-button__inner">
-              <i class="fa-solid fa-font"></i>
+              <i class="fa-solid fa-pen-nib"></i>
             </span>
           </a>
           <a href="https://fontawesome.com/icons" class="social-buttons__button social-button social-button--fontawesome" aria-label="fontawesome">
@@ -91,12 +91,21 @@
     </div>
     <div class="cards">
       <div class="card-1">
-        <a href="https://stackoverflow.com/">
+        <a href="https://ray.so/">
           <div class="card-inner card-inner-1">
-            <div class="card-left"><i class="fa-brands fa-stack-overflow"></i></div>
+            <div class="card-left"><i class="fa-solid fa-registered"></i></div>
             <div class="card-right">
-              <h1>Stack Overflow</h1>
-              <p>stackoverflow.com</p>
+              <h1>Code Prettier</h1>
+              <p>ray.so</p>
+            </div>
+          </div>
+        </a>
+        <a href="https://pika.style/templates/screenshot-editor">
+          <div class="card-inner card-inner-4">
+            <div class="card-left"><i class="fa-brands fa-pagelines"></i></div>
+            <div class="card-right">
+              <h1>Pika</h1>
+              <p>Pika.com</p>
             </div>
           </div>
         </a>
@@ -115,15 +124,6 @@
             <div class="card-right">
               <h1>Colorhunt</h1>
               <p>colorhunt.com</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://www.erase.bg/upload">
-          <div class="card-inner card-inner-4">
-            <div class="card-left"><i class="fa-solid fa-eraser"></i></div>
-            <div class="card-right">
-              <h1>Bg erase</h1>
-              <p>removebg.com</p>
             </div>
           </div>
         </a>
