--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
               <i class="fa-solid fa-font-awesome"></i>
             </span>
           </a>
+          <a href="https://monkeytype.com/" class="social-buttons__button social-button social-button--monkeytype" aria-label="monkeytype">
+            <span class="social-button__inner">
+              <i class="fa-brands fa-typo3"></i>
+            </span>
+          </a>
         </div>
         <div class="box">
           <p>Coding is love 💖</p>    
