add readme link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,83 +9,103 @@
   <script src="https://kit.fontawesome.com/e64b4eb724.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="topBar">
-      <a href="https://dhruv1086k.github.io/dhurvportfolio/" target = "_blank">My Site</a>
+      <a href="https://dhruv1086k.github.io/dhurvportfolio/" target="_blank">My Site</a>
     </div>
     <div class="center">
       <div class="right">
         <img src="img.jpg" alt="dhruv">
         <div class="social-buttons">
-          <a href="https://www.youtube.com/" class="social-buttons__button social-button social-button--facebook" aria-label="Facebook">
+          <a href="https://www.youtube.com/" class="social-buttons__button social-button social-button--facebook"
+            aria-label="Facebook">
             <span class="social-button__inner">
               <i class="fab fa-youtube"></i>
             </span>
           </a>
-          <a href="https://www.linkedin.com/feed/" class="social-buttons__button social-button social-button--linkedin" aria-label="LinkedIn">
+          <a href="https://www.linkedin.com/feed/" class="social-buttons__button social-button social-button--linkedin"
+            aria-label="LinkedIn">
             <span class="social-button__inner">
               <i class="fab fa-linkedin-in"></i>
             </span>
           </a>
-          <a href="https://www.instagram.com/" target="_blank" class="social-buttons__button social-button social-button--instagram" aria-label="InstaGram">
+          <a href="https://www.instagram.com/" target="_blank"
+            class="social-buttons__button social-button social-button--instagram" aria-label="InstaGram">
             <span class="social-button__inner">
               <i class="fab fa-instagram"></i>
             </span>
           </a>
-          <a href="https://x.com/home" target="_blank" class="social-buttons__button social-button social-button--twitter" aria-label="Twitter">
+          <a href="https://x.com/home" target="_blank"
+            class="social-buttons__button social-button social-button--twitter" aria-label="Twitter">
             <span class="social-button__inner">
               <i class="fa-brands fa-x-twitter"></i>
             </span>
           </a>
-          <a href="https://github.com/dhruv1086k" class="social-buttons__button social-button social-button--github" aria-label="GitHub">
+          <a href="https://github.com/dhruv1086k" class="social-buttons__button social-button social-button--github"
+            aria-label="GitHub">
             <span class="social-button__inner">
               <i class="fab fa-github"></i>
             </span>
           </a>
-          <a href="https://mail.google.com/mail/u/0/#inbox" class="social-buttons__button social-button social-button--mail" aria-label="mail">
+          <a href="https://mail.google.com/mail/u/0/#inbox"
+            class="social-buttons__button social-button social-button--mail" aria-label="mail">
             <span class="social-button__inner">
               <i class="fa-solid fa-envelope"></i>
             </span>
           </a>
-          <a href="https://drive.google.com/drive/u/0/my-drive" class="social-buttons__button social-button social-button--drive" aria-label="drive">
+          <a href="https://drive.google.com/drive/u/0/my-drive"
+            class="social-buttons__button social-button social-button--drive" aria-label="drive">
             <span class="social-button__inner">
               <i class="fa-brands fa-google-drive"></i>
-            </span>   
+            </span>
           </a>
-          <a href="https://www.apnacollege.in/path-player?courseid=sigma-feb24&unit=660fa65a3a4c0bc8650f7e5aUnit" class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
+          <a href="https://www.apnacollege.in/path-player?courseid=sigma-feb24&unit=660fa65a3a4c0bc8650f7e5aUnit"
+            class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
             <span class="social-button__inner">
               <i class="fa-solid fa-book"></i>
             </span>
           </a>
-          <a href="https://www.fiverr.com/users/dhruvpal1086/seller_dashboard" class="social-buttons__button social-button social-button--fiverr" aria-label="fiverr">
+          <a href="https://www.fiverr.com/users/dhruvpal1086/seller_dashboard"
+            class="social-buttons__button social-button social-button--fiverr" aria-label="fiverr">
             <span class="social-button__inner">
               <i class="fa-brands fa-fonticons-fi"></i>
             </span>
           </a>
-          <a href="https://tailwindcss.com/docs/installation" class="social-buttons__button social-button social-button--tailwind" aria-label="tailwind">
+          <a href="https://tailwindcss.com/docs/installation"
+            class="social-buttons__button social-button social-button--tailwind" aria-label="tailwind">
             <span class="social-button__inner">
               <i class="fa-solid fa-file-code"></i>
             </span>
           </a>
-          <a href="https://fonts.google.com/" class="social-buttons__button social-button social-button--googlefonts" aria-label="googlefonts">
+          <a href="https://fonts.google.com/" class="social-buttons__button social-button social-button--googlefonts"
+            aria-label="googlefonts">
             <span class="social-button__inner">
               <i class="fa-solid fa-pen-nib"></i>
             </span>
           </a>
-          <a href="https://fontawesome.com/icons" class="social-buttons__button social-button social-button--fontawesome" aria-label="fontawesome">
+          <a href="https://fontawesome.com/icons"
+            class="social-buttons__button social-button social-button--fontawesome" aria-label="fontawesome">
             <span class="social-button__inner">
               <i class="fa-solid fa-font-awesome"></i>
             </span>
           </a>
-          <a href="https://monkeytype.com/" class="social-buttons__button social-button social-button--monkeytype" aria-label="monkeytype">
+          <a href="https://monkeytype.com/" class="social-buttons__button social-button social-button--monkeytype"
+            aria-label="monkeytype">
             <span class="social-button__inner">
               <i class="fa-brands fa-typo3"></i>
             </span>
           </a>
+          <a href="https://readme.so/editor" class="social-buttons__button social-button social-button--readme"
+            aria-label="readme">
+            <span class="social-button__inner">
+              <i class="fa-solid fa-scroll"></i>
+            </span>
+          </a>
         </div>
         <div class="box">
-          <p>Coding is love 💖</p>    
+          <p>Coding is love 💖</p>
         </div>
       </div>
     </div>
@@ -174,4 +195,5 @@
     </div>
   </div>
 </body>
+
 </html>
