--- a/index.html
+++ b/index.html
@@ -1,199 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Howdy Dhruv</title>
+    <link rel="icon" href="img12.ico" />
+    <script
+      src="https://kit.fontawesome.com/e64b4eb724.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Howdy Dhruv</title>
-  <link rel="icon" href="img12.ico">
-  <script src="https://kit.fontawesome.com/e64b4eb724.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <div class="container">
-    <div class="topBar">
-      <a href="https://dhruv1086k.github.io/dhurvportfolio/" target="_blank">My Site</a>
-    </div>
-    <div class="center">
-      <div class="right">
-        <img src="img.jpg" alt="dhruv">
-        <div class="social-buttons">
-          <a href="https://www.youtube.com/" class="social-buttons__button social-button social-button--facebook"
-            aria-label="Facebook">
-            <span class="social-button__inner">
-              <i class="fab fa-youtube"></i>
-            </span>
+  <body>
+    <div class="container">
+      <div class="noteImg">
+        <img src="./note.png" alt="" />
+      </div>
+      <div class="topBar">
+        <a href="https://dhruv1086k.github.io/dhurvportfolio/" target="_blank"
+          >My Site</a
+        >
+      </div>
+      <div class="center">
+        <div class="right">
+          <img src="img2.png" alt="dhruv" />
+          <div class="social-buttons">
+            <a
+              href="https://www.youtube.com/"
+              class="social-buttons__button social-button social-button--facebook"
+              aria-label="Facebook"
+            >
+              <span class="social-button__inner">
+                <i class="fab fa-youtube"></i>
+              </span>
+            </a>
+            <a
+              href="https://www.linkedin.com/feed/"
+              class="social-buttons__button social-button social-button--linkedin"
+              aria-label="LinkedIn"
+            >
+              <span class="social-button__inner">
+                <i class="fab fa-linkedin-in"></i>
+              </span>
+            </a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="social-buttons__button social-button social-button--instagram"
+              aria-label="InstaGram"
+            >
+              <span class="social-button__inner">
+                <i class="fab fa-instagram"></i>
+              </span>
+            </a>
+            <a
+              href="https://x.com/home"
+              target="_blank"
+              class="social-buttons__button social-button social-button--twitter"
+              aria-label="Twitter"
+            >
+              <span class="social-button__inner">
+                <i class="fa-brands fa-x-twitter"></i>
+              </span>
+            </a>
+            <a
+              href="https://github.com/dhruv1086k"
+              class="social-buttons__button social-button social-button--github"
+              aria-label="GitHub"
+            >
+              <span class="social-button__inner">
+                <i class="fab fa-github"></i>
+              </span>
+            </a>
+            <a
+              href="https://mail.google.com/mail/u/0/#inbox"
+              class="social-buttons__button social-button social-button--mail"
+              aria-label="mail"
+            >
+              <span class="social-button__inner">
+                <i class="fa-solid fa-envelope"></i>
+              </span>
+            </a>
+            <a
+              href="https://drive.google.com/drive/u/0/my-drive"
+              class="social-buttons__button social-button social-button--drive"
+              aria-label="drive"
+            >
+              <span class="social-button__inner">
+                <i class="fa-brands fa-google-drive"></i>
+              </span>
+            </a>
+            <a
+              href="https://www.apnacollege.in/path-player?courseid=sigma-feb24&unit=660fa65a3a4c0bc8650f7e5aUnit"
+              class="social-buttons__button social-button social-button--apnaCollege"
+              aria-label="apnaCollege"
+            >
+              <span class="social-button__inner">
+                <i class="fa-solid fa-book"></i>
+              </span>
+            </a>
+            <a
+              href="https://www.fiverr.com/users/dhruvpal1086/seller_dashboard"
+              class="social-buttons__button social-button social-button--fiverr"
+              aria-label="fiverr"
+            >
+              <span class="social-button__inner">
+                <i class="fa-brands fa-fonticons-fi"></i>
+              </span>
+            </a>
+            <a
+              href="https://tailwindcss.com/docs/installation"
+              class="social-buttons__button social-button social-button--tailwind"
+              aria-label="tailwind"
+            >
+              <span class="social-button__inner">
+                <i class="fa-solid fa-file-code"></i>
+              </span>
+            </a>
+            <a
+              href="https://fonts.google.com/"
+              class="social-buttons__button social-button social-button--googlefonts"
+              aria-label="googlefonts"
+            >
+              <span class="social-button__inner">
+                <i class="fa-solid fa-pen-nib"></i>
+              </span>
+            </a>
+            <a
+              href="https://fontawesome.com/icons"
+              class="social-buttons__button social-button social-button--fontawesome"
+              aria-label="fontawesome"
+            >
+              <span class="social-button__inner">
+                <i class="fa-solid fa-font-awesome"></i>
+              </span>
+            </a>
+            <a
+              href="https://monkeytype.com/"
+              class="social-buttons__button social-button social-button--monkeytype"
+              aria-label="monkeytype"
+            >
+              <span class="social-button__inner">
+                <i class="fa-brands fa-typo3"></i>
+              </span>
+            </a>
+            <a
+              href="https://readme.so/editor"
+              class="social-buttons__button social-button social-button--readme"
+              aria-label="readme"
+            >
+              <span class="social-button__inner">
+                <i class="fa-solid fa-scroll"></i>
+              </span>
+            </a>
+          </div>
+          <div class="box">
+            <p>Coding is love 💖</p>
+          </div>
+        </div>
+      </div>
+      <div class="search">
+        <form
+          action="https://www.google.com/search"
+          method="get"
+          class="search-bar"
+        >
+          <input
+            type="text"
+            placeholder="Search here..."
+            autocomplete="off"
+            name="q"
+          />
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
+      <div class="cards">
+        <div class="card-1">
+          <a href="https://ray.so/">
+            <div class="card-inner card-inner-1">
+              <div class="card-left">
+                <i class="fa-solid fa-registered"></i>
+              </div>
+              <div class="card-right">
+                <h1>Code Prettier</h1>
+                <p>ray.so</p>
+              </div>
+            </div>
           </a>
-          <a href="https://www.linkedin.com/feed/" class="social-buttons__button social-button social-button--linkedin"
-            aria-label="LinkedIn">
-            <span class="social-button__inner">
-              <i class="fab fa-linkedin-in"></i>
-            </span>
+          <a href="https://pika.style/templates/screenshot-editor">
+            <div class="card-inner card-inner-4">
+              <div class="card-left">
+                <i class="fa-brands fa-pagelines"></i>
+              </div>
+              <div class="card-right">
+                <h1>Pika</h1>
+                <p>Pika.com</p>
+              </div>
+            </div>
           </a>
-          <a href="https://www.instagram.com/" target="_blank"
-            class="social-buttons__button social-button social-button--instagram" aria-label="InstaGram">
-            <span class="social-button__inner">
-              <i class="fab fa-instagram"></i>
-            </span>
+          <a href="https://github.com/dhruv1086k">
+            <div class="card-inner card-inner-2">
+              <div class="card-left"><i class="fa-brands fa-github"></i></div>
+              <div class="card-right">
+                <h1>Github</h1>
+                <p>github.com</p>
+              </div>
+            </div>
           </a>
-          <a href="https://x.com/home" target="_blank"
-            class="social-buttons__button social-button social-button--twitter" aria-label="Twitter">
-            <span class="social-button__inner">
-              <i class="fa-brands fa-x-twitter"></i>
-            </span>
-          </a>
-          <a href="https://github.com/dhruv1086k" class="social-buttons__button social-button social-button--github"
-            aria-label="GitHub">
-            <span class="social-button__inner">
-              <i class="fab fa-github"></i>
-            </span>
-          </a>
-          <a href="https://mail.google.com/mail/u/0/#inbox"
-            class="social-buttons__button social-button social-button--mail" aria-label="mail">
-            <span class="social-button__inner">
-              <i class="fa-solid fa-envelope"></i>
-            </span>
-          </a>
-          <a href="https://drive.google.com/drive/u/0/my-drive"
-            class="social-buttons__button social-button social-button--drive" aria-label="drive">
-            <span class="social-button__inner">
-              <i class="fa-brands fa-google-drive"></i>
-            </span>
-          </a>
-          <a href="https://www.apnacollege.in/path-player?courseid=sigma-feb24&unit=660fa65a3a4c0bc8650f7e5aUnit"
-            class="social-buttons__button social-button social-button--apnaCollege" aria-label="apnaCollege">
-            <span class="social-button__inner">
-              <i class="fa-solid fa-book"></i>
-            </span>
-          </a>
-          <a href="https://www.fiverr.com/users/dhruvpal1086/seller_dashboard"
-            class="social-buttons__button social-button social-button--fiverr" aria-label="fiverr">
-            <span class="social-button__inner">
-              <i class="fa-brands fa-fonticons-fi"></i>
-            </span>
-          </a>
-          <a href="https://tailwindcss.com/docs/installation"
-            class="social-buttons__button social-button social-button--tailwind" aria-label="tailwind">
-            <span class="social-button__inner">
-              <i class="fa-solid fa-file-code"></i>
-            </span>
-          </a>
-          <a href="https://fonts.google.com/" class="social-buttons__button social-button social-button--googlefonts"
-            aria-label="googlefonts">
-            <span class="social-button__inner">
-              <i class="fa-solid fa-pen-nib"></i>
-            </span>
-          </a>
-          <a href="https://fontawesome.com/icons"
-            class="social-buttons__button social-button social-button--fontawesome" aria-label="fontawesome">
-            <span class="social-button__inner">
-              <i class="fa-solid fa-font-awesome"></i>
-            </span>
-          </a>
-          <a href="https://monkeytype.com/" class="social-buttons__button social-button social-button--monkeytype"
-            aria-label="monkeytype">
-            <span class="social-button__inner">
-              <i class="fa-brands fa-typo3"></i>
-            </span>
-          </a>
-          <a href="https://readme.so/editor" class="social-buttons__button social-button social-button--readme"
-            aria-label="readme">
-            <span class="social-button__inner">
-              <i class="fa-solid fa-scroll"></i>
-            </span>
+          <a href="https://colorhunt.co/">
+            <div class="card-inner card-inner-3">
+              <div class="card-left"><i class="fa-solid fa-droplet"></i></div>
+              <div class="card-right">
+                <h1>Colorhunt</h1>
+                <p>colorhunt.com</p>
+              </div>
+            </div>
           </a>
         </div>
-        <div class="box">
-          <p>Coding is love 💖</p>
+        <div class="card-2">
+          <a href="https://chat.openai.com/">
+            <div class="card-inner card-inner-5">
+              <div class="card-left"><i class="fa-solid fa-robot"></i></div>
+              <div class="card-right">
+                <h1>Chat GPT</h1>
+                <p>chatgpt.com</p>
+              </div>
+            </div>
+          </a>
+          <a href="https://www.canva.com/">
+            <div class="card-inner card-inner-6">
+              <div class="card-left"><i class="fa-solid fa-c"></i></div>
+              <div class="card-right">
+                <h1>Canva</h1>
+                <p>canva.com</p>
+              </div>
+            </div>
+          </a>
+          <a href="https://classroom.google.com/h">
+            <div class="card-inner card-inner-7">
+              <div class="card-left">
+                <i class="fa-solid fa-chalkboard-user"></i>
+              </div>
+              <div class="card-right">
+                <h1>Classroom</h1>
+                <p>classroom.google.com</p>
+              </div>
+            </div>
+          </a>
+          <a href="https://keep.google.com/u/0/#home">
+            <div class="card-inner card-inner-8">
+              <div class="card-left">
+                <i class="fa-solid fa-note-sticky"></i>
+              </div>
+              <div class="card-right">
+                <h1>Google Notes</h1>
+                <p>notes.com</p>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
-    <div class="search">
-      <form action="https://www.google.com/search" method="get" class="search-bar">
-        <input type="text" placeholder="Search here..." autocomplete="off" name="q">
-        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-      </form>
-    </div>
-    <div class="cards">
-      <div class="card-1">
-        <a href="https://ray.so/">
-          <div class="card-inner card-inner-1">
-            <div class="card-left"><i class="fa-solid fa-registered"></i></div>
-            <div class="card-right">
-              <h1>Code Prettier</h1>
-              <p>ray.so</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://pika.style/templates/screenshot-editor">
-          <div class="card-inner card-inner-4">
-            <div class="card-left"><i class="fa-brands fa-pagelines"></i></div>
-            <div class="card-right">
-              <h1>Pika</h1>
-              <p>Pika.com</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://github.com/dhruv1086k">
-          <div class="card-inner card-inner-2">
-            <div class="card-left"><i class="fa-brands fa-github"></i></div>
-            <div class="card-right">
-              <h1>Github</h1>
-              <p>github.com</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://colorhunt.co/">
-          <div class="card-inner card-inner-3">
-            <div class="card-left"><i class="fa-solid fa-droplet"></i></div>
-            <div class="card-right">
-              <h1>Colorhunt</h1>
-              <p>colorhunt.com</p>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="card-2">
-        <a href="https://chat.openai.com/">
-          <div class="card-inner card-inner-5">
-            <div class="card-left"><i class="fa-solid fa-robot"></i></div>
-            <div class="card-right">
-              <h1>Chat GPT</h1>
-              <p>chatgpt.com</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://www.canva.com/">
-          <div class="card-inner card-inner-6">
-            <div class="card-left"><i class="fa-solid fa-c"></i></div>
-            <div class="card-right">
-              <h1>Canva</h1>
-              <p>canva.com</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://classroom.google.com/h">
-          <div class="card-inner card-inner-7">
-            <div class="card-left"><i class="fa-solid fa-chalkboard-user"></i></div>
-            <div class="card-right">
-              <h1>Classroom</h1>
-              <p>classroom.google.com</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://keep.google.com/u/0/#home">
-          <div class="card-inner card-inner-8">
-            <div class="card-left"><i class="fa-solid fa-note-sticky"></i></div>
-            <div class="card-right">
-              <h1>Google Notes</h1>
-              <p>notes.com</p>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
