--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <div class="center">
         <div class="right">
           <img src="img2.png" alt="dhruv" />
+          <div class="box">
+            <p>Coding is love 💖</p>
+          </div>
           <div class="social-buttons">
             <a
               href="https://www.youtube.com/"
@@ -92,6 +95,15 @@
               </span>
             </a>
             <a
+              href="https://discord.com/channels/@me"
+              class="social-buttons__button social-button social-button--discord"
+              aria-label="discord"
+            >
+              <span class="social-button__inner">
+                <i class="fa-brands fa-discord"></i>
+              </span>
+            </a>
+            <a
               href="https://www.apnacollege.in/path-player?courseid=sigma-feb24&unit=660fa65a3a4c0bc8650f7e5aUnit"
               class="social-buttons__button social-button social-button--apnaCollege"
               aria-label="apnaCollege"
@@ -155,27 +167,7 @@
               </span>
             </a>
           </div>
-          <div class="box">
-            <p>Coding is love 💖</p>
-          </div>
         </div>
-      </div>
-      <div class="search">
-        <form
-          action="https://www.google.com/search"
-          method="get"
-          class="search-bar"
-        >
-          <input
-            type="text"
-            placeholder="Search here..."
-            autocomplete="off"
-            name="q"
-          />
-          <button type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-        </form>
       </div>
       <div class="cards">
         <div class="card-1">
