remove circle webs and noteImg

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <body>
     <div class="container">
-      <div class="noteImg">
+      <!-- <div class="noteImg">
         <img src="./note.png" alt="" />
-      </div>
+      </div> -->
       <div class="topBar">
         <a href="https://dhruv1086k.github.io/dhurvportfolio/" target="_blank"
           >My Site</a
@@ -45,16 +45,6 @@
             >
               <span class="social-button__inner">
                 <i class="fab fa-linkedin-in"></i>
-              </span>
-            </a>
-            <a
-              href="https://www.instagram.com/"
-              target="_blank"
-              class="social-buttons__button social-button social-button--instagram"
-              aria-label="InstaGram"
-            >
-              <span class="social-button__inner">
-                <i class="fab fa-instagram"></i>
               </span>
             </a>
             <a
@@ -113,15 +103,6 @@
               </span>
             </a>
             <a
-              href="https://www.fiverr.com/users/dhruvpal1086/seller_dashboard"
-              class="social-buttons__button social-button social-button--fiverr"
-              aria-label="fiverr"
-            >
-              <span class="social-button__inner">
-                <i class="fa-brands fa-fonticons-fi"></i>
-              </span>
-            </a>
-            <a
               href="https://tailwindcss.com/docs/installation"
               class="social-buttons__button social-button social-button--tailwind"
               aria-label="tailwind"
@@ -140,30 +121,12 @@
               </span>
             </a>
             <a
-              href="https://fontawesome.com/icons"
-              class="social-buttons__button social-button social-button--fontawesome"
-              aria-label="fontawesome"
+              href="https://www.notion.so/Everyday-Tasks-0faa55f4915940debb388f8d382557be"
+              class="social-buttons__button social-button social-button--notion"
+              aria-label="notion"
             >
               <span class="social-button__inner">
-                <i class="fa-solid fa-font-awesome"></i>
-              </span>
-            </a>
-            <a
-              href="https://monkeytype.com/"
-              class="social-buttons__button social-button social-button--monkeytype"
-              aria-label="monkeytype"
-            >
-              <span class="social-button__inner">
-                <i class="fa-brands fa-typo3"></i>
-              </span>
-            </a>
-            <a
-              href="https://readme.so/editor"
-              class="social-buttons__button social-button social-button--readme"
-              aria-label="readme"
-            >
-              <span class="social-button__inner">
-                <i class="fa-solid fa-scroll"></i>
+                <i class="fa-solid fa-n"></i>
               </span>
             </a>
           </div>
@@ -202,12 +165,12 @@
               </div>
             </div>
           </a>
-          <a href="https://colorhunt.co/">
+          <a href="https://readme.so/editor">
             <div class="card-inner card-inner-3">
-              <div class="card-left"><i class="fa-solid fa-droplet"></i></div>
+              <div class="card-left"><i class="fa-solid fa-scroll"></i></div>
               <div class="card-right">
-                <h1>Colorhunt</h1>
-                <p>colorhunt.com</p>
+                <h1>Readme Editor</h1>
+                <p>readmeditor.com</p>
               </div>
             </div>
           </a>
